--- a/sample.ipynb
+++ b/sample.ipynb
@@ -13,6 +13,22 @@
    "source": [
     "import numpy as np\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3c9140c6",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "#Hidden states\n",
+    "states = ['Rainy', 'Sunny']\n",
+    "n_states = len(states)"
+   ]
   }
  ],
  "metadata": {
