--- a/sample.ipynb
+++ b/sample.ipynb
@@ -29,6 +29,22 @@
     "states = ['Rainy', 'Sunny']\n",
     "n_states = len(states)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "baa72b78",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "#Observable states\n",
+    "observations = ['walk', 'shop', 'clean']\n",
+    "n_observations = len(observations)"
+   ]
   }
  ],
  "metadata": {
