--- a/sample.ipynb
+++ b/sample.ipynb
@@ -45,6 +45,21 @@
     "observations = ['walk', 'shop', 'clean']\n",
     "n_observations = len(observations)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aa9c6f45",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "#probability for states\n",
+    "start_probability = {'Rainy': 0.6, 'Sunny': 0.4}\n"
+   ]
   }
  ],
  "metadata": {
