--- a/sample.ipynb
+++ b/sample.ipynb
@@ -60,6 +60,24 @@
     "#probability for states\n",
     "start_probability = {'Rainy': 0.6, 'Sunny': 0.4}\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "31fa8020",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "#Probability of transition from one state to another\n",
+    "transition_probability = {\n",
+    "    'Rainy': {'Rainy': 0.7, 'Sunny': 0.3},\n",
+    "    'Sunny': {'Rainy': 0.4, 'Sunny': 0.6},\n",
+    "}\n"
+   ]
   }
  ],
  "metadata": {
