Probability of different activities during each state

--- a/sample.ipynb
+++ b/sample.ipynb
@@ -78,6 +78,23 @@
     "    'Sunny': {'Rainy': 0.4, 'Sunny': 0.6},\n",
     "}\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e1000bc5",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "emission_probability = {\n",
+    "    'Rainy': {'walk': 0.1, 'shop': 0.4, 'clean': 0.5},\n",
+    "    'Sunny': {'walk': 0.6, 'shop': 0.3, 'clean': 0.1},\n",
+    "}"
+   ]
   }
  ],
  "metadata": {
