Viterbi algorithm func

--- a/sample.ipynb
+++ b/sample.ipynb
@@ -95,6 +95,46 @@
     "    'Sunny': {'walk': 0.6, 'shop': 0.3, 'clean': 0.1},\n",
     "}"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1c47f76d",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "def viterbi(obs_seq, states, start_p, trans_p, emit_p):\n",
+    "    V = [{}]\n",
+    "    path = {}\n",
+    "\n",
+    "    # Initialize base cases (t == 0)\n",
+    "    for state in states:\n",
+    "        V[0][state] = start_p[state] * emit_p[state][obs_seq[0]]\n",
+    "        path[state] = [state]\n",
+    "    \n",
+    "    # Run Viterbi for t > 0\n",
+    "    for t in range(1, len(obs_seq)):\n",
+    "        V.append({})\n",
+    "        new_path = {}\n",
+    "        \n",
+    "        for curr_state in states:\n",
+    "            max_prob, prev_st_selected = max(\n",
+    "                (V[t-1][prev_state] * trans_p[prev_state][curr_state] * emit_p[curr_state][obs_seq[t]], prev_state)\n",
+    "                for prev_state in states\n",
+    "            )\n",
+    "            V[t][curr_state] = max_prob\n",
+    "            new_path[curr_state] = path[prev_st_selected] + [curr_state]\n",
+    "        \n",
+    "        path = new_path\n",
+    "    \n",
+    "    # Find the final most probable state and its probability\n",
+    "    max_prob, final_state = max((V[len(obs_seq)-1][state], state) for state in states)\n",
+    "    return max_prob, path[final_state]\n"
+   ]
   }
  ],
  "metadata": {
