--- a/sample.ipynb
+++ b/sample.ipynb
@@ -135,6 +135,28 @@
     "    max_prob, final_state = max((V[len(obs_seq)-1][state], state) for state in states)\n",
     "    return max_prob, path[final_state]\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b0898ed7",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "if __name__ == \"__main__\":\n",
+    "    # Example observation sequence\n",
+    "    obs_seq = ['walk', 'shop', 'clean']\n",
+    "    max_prob, state_sequence = viterbi(obs_seq, states, start_probability, transition_probability, emission_probability)\n",
+    "    \n",
+    "    print(\"Most probable state sequence:\")\n",
+    "    print(state_sequence)\n",
+    "    print(\"Probability of the sequence:\")\n",
+    "    print(max_prob)\n"
+   ]
   }
  ],
  "metadata": {
